[package]
name = "fhe_rollup"
version = "0.1.1"
edition = "2021"

[dependencies]
stylus-sdk = "0.5.1"
mini-alloc = "0.4.2"
tfhe  = { path = "../tfhe-rs/tfhe", features = ["boolean"] }
getrandom = { version = "*", features = ["js"] }

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"

debug = false            # no debug data
rpath = false            # no run-time search path
debug-assertions = false # prune debug assertions
incremental = false      # no incremental builds

[workspace]
