[package]
name = "fhe_rollup"
version = "0.1.1"
edition = "2021"

[dependencies]
stylus-sdk = "0.5.1"
mini-alloc = "0.4.2"
tfhe  = { path = "../tfhe-rs/tfhe", features = ["integer"] }
getrandom = { version = "*", features = ["js"] }
alloy-primitives = "0.3.1"
alloy-sol-types = "0.3.1"
wee_alloc = "0.4.5"
serde = "1.0.204"
serde_json = "1.0.120"

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"

debug = false            # no debug data
rpath = false            # no run-time search path
debug-assertions = false # prune debug assertions
incremental = false      # no incremental builds

[workspace]
